--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
     "tailwindcss": "^3.3.5"
+  },
+  "scripts": {
+    "build": "tailwindcss -i ./src/input.css -o ./public/output.css",
+    "watch": "tailwindcss -i ./src/input.css -o ./public/output.css --watch"
   }
 }
